feat: change assignment response to map<string, string> & store text ids in db
