# services/prismdbmodels/model/experimentVariant.go
@@ -1,9 +1,7 @@
 package model
 
 type ExperimentVariant struct {
-	ExperimentID   int32   `json:"experiment_id"`
-	ExperimentName string  `json:"experiment_name"`
-	VariantID      int32   `json:"variant_id"`
-	VariantName    string  `json:"variant_name"`
-	Buckets        []int32 `json:"buckets"`
+	FeatureFlagID string  `json:"feature_flag_id"`
+	VariantID     string  `json:"variant_id"`
+	Buckets       []int32 `json:"buckets"`
 }
