# services/prismdbmodels/model/variant.go
@@ -3,6 +3,7 @@ package model
 type Variant struct {
 	ID           int64   `json:"id"`
 	ExperimentID int64   `json:"experiment_id"`
+	VariantID    string  `json:"variant_id"`
 	Name         string  `json:"name"`
 	Buckets      []int32 `json:"buckets"`
 }
